@@ -1,5 +1,5 @@
 
 doc_DATA = index.html index-1.html \
-	index-2.html index-3.html index-4.html index-5.html
+	index-2.html index-3.html index-4.html index-5.html logotp3.gif
 docdir = $(kde_htmldir)/en/knotes
 
