@@ -1,35 +1,21 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<HTML>
-<HEAD>
-<TITLE>The KNotes Handbook: Questions and answers</TITLE>
+<--A-->
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
 <META NAME="keywords" CONTENT="">
 <META NAME="description" CONTENT="">
-</HEAD>
+<--B-->
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
 <A HREF="http://www.kde.org/"><IMG SRC="logotp3.gif" BORDER="0" ALT="The K Desktop Environment"></A>
 <HR WIDTH="100%" SIZE=2 ALIGN="CENTER" NOSHADE>
 
- 
-<P ALIGN="RIGHT">
-
-Next<A HREF="index-4.html">Previous</A>
-<A HREF="index.html#toc5">Table of Contents</A>
-</P>
-<H3><A NAME="s5">5. Questions and answers</A></H3>
-
-<P>
-<P ALIGN="RIGHT">
-
-Next<A HREF="index-4.html">Previous</A>
-<A HREF="index.html#toc5">Table of Contents</A>
-</P>
+<--C-->
 <CENTER>
 <HR WIDTH="100%" SIZE=3 ALIGN=CENTER NOSHADE>
 </CENTER>    
 </FONT>
 
- 
-</BODY>
-</HTML>
+<--BarTags1-->
+<P ALIGN="RIGHT">
+
+<--BarTags2-->
+</P>
