@@ -1,5 +1,7 @@
 Thu Apr  9 03:21:54 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>
 
+	* knotes recognizes urls now.
+
 	* Fixed up knotes and implemented docking properly
 
 Thu Aug  7 18:50:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
